--- a/templates/forms/users/edit-user.html
+++ b/templates/forms/users/edit-user.html
@@ -1,6 +1,11 @@
 <div class="form-box hide" id="{{ user._id }}" value="edit">
     <form action="{{ url_for('update_entry', usr_type='users', usr_id=user._id) }}" method="POST" class="col s12">
         <div class="row">
+            <h2 class="heading-text">Edit user</h2>
+            <p class="secondary-text center">Here you can edit user details</p>
+            <p class="center">Just fill in the fields you want to update and then press the "Update" button at the end of the form.</p>
+        </div>
+        <div class="row">
             <div class="input-field col s6">
                 <input name="first_name" type="text" class="validate" data-length="40">
                 <label for="first_name">First Name</label>
