Updated styles to suit better space redistribution on cards

--- a/static/css/layout/_mediaQueries.scss
+++ b/static/css/layout/_mediaQueries.scss
@@ -5,6 +5,9 @@
     //     font-size: 4rem!important;
     //     margin: -0.5rem!important;
     // }
+    .switch label .lever {
+        margin: 1rem;
+    }
     .logo-box img {
         max-height: 3.3rem;
         margin: 0.4rem;
