--- a/templates/dashboard/dash-staff.html
+++ b/templates/dashboard/dash-staff.html
@@ -3,13 +3,13 @@
         <div class="col s12 m3">
             <p class="card-title">Users</p>
         </div>
-        <div class="col s12 m6">
+        <div class="col s12 m5 l6">
             <div class="card-content">
                 <p class="card-content-title">Description</p>
                 <p> Update or delete users</p>
             </div>
         </div>
-        <div class="col s12 m3 buttons-row">
+        <div class="col s12 m4 l3 buttons-row">
             <a href="{{url_for('get_users')}}" class="waves-effect waves-light btn card-action-button form-trigger">
                 <i class="material-icons right card-action-button-icon">edit</i>
                 <span>Users</span>
@@ -17,16 +17,16 @@
         </div>
     </div>
     <div class="card row single-card">
-        <div class="col s12 m3">
+        <div class="col s12 m3 l3">
             <p class="card-title">Adoption Requests</p>
         </div>
-        <div class="col s12 m6">
+        <div class="col s12 m5 l6">
             <div class="card-content">
                 <p class="card-content-title">Description</p>
                 <p>Update or delete adoption requests</p>
             </div>
         </div>
-        <div class="col s12 m3 buttons-row">
+        <div class="col s12 m4 l3 buttons-row">
             <a href="{{url_for('get_adopt_requests')}}" class="waves-effect waves-light btn card-action-button form-trigger">
                 <i class="material-icons right card-action-button-icon">edit</i>
                 <span>Adoptions</span>
@@ -34,16 +34,16 @@
         </div>
     </div>
     <div class="card row single-card">
-        <div class="col s12 m3">
+        <div class="col s12 m3 l3">
             <p class="card-title">Create new register</p>
         </div>
-        <div class="col s12 m6">
+        <div class="col s12 m5 l6">
             <div class="card-content">
                 <p class="card-content-title">Description</p>
                 <p class="truncate">Add new dog or user</p>
             </div>
         </div>
-        <div class="col s12 m3 buttons-row">
+        <div class="col s12 m4 l3 buttons-row">
             <a href="{{url_for('register')}}" class="waves-effect waves-light btn card-action-button form-trigger">
                 <i class="material-icons right card-action-button-icon">edit</i>
                 <span>Register</span>
