--- a/templates/dashboard/dash-user.html
+++ b/templates/dashboard/dash-user.html
@@ -1,12 +1,12 @@
 <div class="row card-row-find">
     <div class="card row single-card">
-        <div class="col s12 m3">
+        <div class="col s12 m3 l3">
             <p class="card-title">{{user.first_name}} {{user.last_name}}</p>
             <div class="card-image">
                 <i class="material-icons card-icon">person</i>
             </div>
         </div>
-        <div class="col s12 m6">
+        <div class="col s12 m5 l6">
             <div class="card-content">
                 {% if user.is_staff == 'on' %}
                     <h4>STAFF</h4>
@@ -15,7 +15,7 @@
                 <p class="truncate">{{user.user_description}}</p>
             </div>
         </div>
-        <div class="col s12 m3 buttons-row">
+        <div class="col s12 m4 l3 buttons-row">
             <a id="{{user._id}}" value="edit" class="waves-effect waves-light btn card-action-button form-trigger">
                 <i class="material-icons right card-action-button-icon">edit</i>
                 <span>Edit</span>
