--- a/templates/pages/stores.html
+++ b/templates/pages/stores.html
@@ -32,7 +32,7 @@
                         <i class="material-icons card-action-button-icon">thumb_down</i>
                     </div>
                 </div>
-                <div class="col s12 m6">
+                <div class="col s12 m5 l6">
                     <div class="card-content">
                         <p class="card-content-title">Description</p>
                         <p>Address: {{store.store_address}}</p>
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 {% if session['is_staff'] %}
-                <div class="col s12 m3 buttons-row">
+                <div class="col s12 m4 l3 buttons-row">
                     <a id="{{store._id}}" value="feedback"
                         class="waves-effect waves-light btn card-action-button form-trigger">
                         <i class="material-icons right card-action-button-icon">thumbs_up_down</i>
