--- a/templates/pages/users.html
+++ b/templates/pages/users.html
@@ -28,7 +28,7 @@
                             <i class="material-icons card-icon">person</i>
                         </div>
                     </div>
-                    <div class="col s12 m6">
+                    <div class="col s12 m5 l6">
                         <div class="card-content">
                             {% if user.is_staff == 'on' %}
                                 <h4>STAFF</h4>
@@ -37,7 +37,7 @@
                             <p class="truncate">{{user.user_description}}</p>
                         </div>
                     </div>
-                    <div class="col s12 m3 buttons-row">
+                    <div class="col s12 m4 l3 buttons-row">
                         <a id="{{user._id}}" value="edit" class="waves-effect waves-light btn card-action-button form-trigger">
                             <i class="material-icons right card-action-button-icon">edit</i>
                             <span>Edit</span>
