--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -8,7 +8,7 @@
 
     {% include 'layout/user-feedback-message.html' %}
     
-    <div class="container">
+    <div class="row container">
         <h2 class="heading-text">Find your best friend!</h2>
         <p class="secondary-text">We have a great variety of dogs and the staff to find your perfect match.</p>
         <p>Adopting a dog is a big deal, we know. We are here to make sure you find a new best friend that will be a
@@ -16,7 +16,11 @@
         <p>Our team of specialists are looking forward to hear from you what do you look for and to give you directions
             on how to enhance your experience as a
             dog-owner-to-be or how to help your pack accepting their new buddy.</p>
-        <h4>Visit our <a href="{{url_for('get_dogs')}}">adoption page</a></h4>
+        <h4>Visit our PAWER Adoption page</h4>
+        <a href="{{url_for('get_dogs')}}" class="col s4 offset-s4 btn waves-effect secondary-text index-action-button">
+            <i class="material-icons">supervisor_account</i>
+            Adopt
+        </a>
     </div>
 </div>
 <div class="parallax-container">
@@ -29,7 +33,11 @@
         <p>There's no better thing than going out and showing off a healthy, good looking dog while having your friends
             saying how smart and well behaved they are!</p>
         <p>We have a great pool of certified professionals that can help you reaching your goals and even more.</p>
-        <h4>Visit our <a href="{{url_for('get_services')}}">PAWER Services</a> page</h4>
+        <h4>Visit our PAWER Services page</h4>
+        <a href="{{url_for('get_services')}}" class="col s4 offset-s4 btn waves-effect secondary-text index-action-button">
+            <i class="material-icons">supervisor_account</i>
+            Services
+        </a>
     </div>
 </div>
 <div class="parallax-container">
@@ -40,7 +48,11 @@
         <h2 class="heading-text">Go shopping!</h2>
         <p class="secondary-text">Looking for dog food, new toys, medicines and more? We've got your back!</p>
         <p>Go through a variety of shops that offer as many options of products as you can dare to imagine!</p>
-        <h4>Visit our <a href="{{url_for('get_stores')}}">PAWER Shops</a> page</h4>
+        <h4>Visit our PAWER Stores page</h4>
+        <a href="{{url_for('get_stores')}}" class="col s4 offset-s4 btn waves-effect secondary-text index-action-button">
+            <i class="material-icons">supervisor_account</i>
+            Stores
+        </a>
     </div>
 </div>
 {% endblock %}
