--- a/templates/pages/services.html
+++ b/templates/pages/services.html
@@ -5,6 +5,9 @@
 </div>
 <div class="section white">
     <div class="container">
+
+        {% include 'layout/user-feedback-message.html' %}
+        
         <div class="container">
             <h2 class="heading-text">Pawer Services</h2>
             <p class="secondary-text">Dog walkers, pet sitters, trainers, groomers...you can find all that and more
