--- a/templates/pages/stores.html
+++ b/templates/pages/stores.html
@@ -4,7 +4,10 @@
     <div class="parallax"><img src="/static/images/pup_deck.jpg"></div>
 </div>
 <div class="section white">
-    <div class="row container">
+    <div class="container">
+
+        {% include 'layout/user-feedback-message.html' %}
+
         <div class="container">
             <h2 class="heading-text">Pawer Stores</h2>
             <p class="secondary-text">Pet food, medicines, accessories, toys...you can find all that and more in our
