--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -16,6 +16,7 @@
 @import 'components/buttons';
 @import 'components/cards';
 @import 'components/sidenav';
+@import 'components/footer';
 
 @import 'layout/mediaQueries';
 
