Added href, rel and target to social media links. Completed about us and copiright sections

--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -3,22 +3,23 @@
         <div class="row">
             <div class="col s6">
                 <h5>About PAWER</h5>
-                <p>We are passionate about dogs and we want to make it easier for everyone to find their best friends.</p>
+                <p>We are passionate about dogs and we want to make it easier for everyone to find their best friends.<br>
+                Here we put together and within your reach a variety of dogs, services and stores.</p>
             </div>
-            <div class="col offset-s2 s4">
+            <div class="col s6">
                 <h5>Visit our Social Channels</h5>
                 <ul>
-                    <li><a href="#!">Youtube</a></li>
-                    <li><a href="#!">Twitter</a></li>
-                    <li><a href="#!">Facebook</a></li>
-                    <li><a href="#!">Instagram</a></li>
+                    <li><a href="https://www.youtube.com" target="_blank" rel="noopener">Youtube</a></li>
+                    <li><a href="https://www.twitter.com" target="_blank" rel="noopener">Twitter</a></li>
+                    <li><a href="https://www.facebook.com" target="_blank" rel="noopener">Facebook</a></li>
+                    <li><a href="https://www.instagram.com" target="_blank" rel="noopener">Instagram</a></li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="footer-copyright">
         <div class="container">
-            © 2020 PAWER Copyright
+            <p>© 2020 Romulo Albuquerque - PAWER Copyright</p>
         </div>
     </div>
 </footer>
