--- a/static/css/style.css
+++ b/static/css/style.css
@@ -174,10 +174,23 @@ nav .button-collapse {
 .single-card {
   margin: 1rem 0;
   padding: 2rem 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.buttons-row {
-  margin: auto;
+.single-card .buttons-row {
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 /* Footer */
