--- a/static/css/components/_cards.scss
+++ b/static/css/components/_cards.scss
@@ -27,6 +27,7 @@
     font-size: 1.5rem;
     font-family: "Alfa Slab One", sans-serif;
     color: $black-color!important;
+    margin: 1rem 0 0!important;
 }
 .card-icon {
     opacity: 0.5;
