--- a/static/css/style.css
+++ b/static/css/style.css
@@ -174,9 +174,6 @@ nav .button-collapse {
 .single-card {
   margin: 1rem 0;
   padding: 2rem 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .single-card .buttons-row {
@@ -290,6 +287,7 @@ nav .button-collapse {
   font-size: 1.5rem;
   font-family: "Alfa Slab One", sans-serif;
   color: #343334 !important;
+  margin: 1rem 0 0 !important;
 }
 
 .card-icon {
@@ -310,6 +308,15 @@ nav .button-collapse {
 
 /* Media Queries */
 @media only screen and (min-width: 600px) {
+  label {
+    font-size: 2rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  [type="radio"]:not(:checked), [type="radio"]:checked {
+    margin: 1rem;
+  }
   .switch label .lever {
     margin: 1rem;
   }
@@ -323,13 +330,15 @@ nav .button-collapse {
   .three-words {
     padding: 0.5rem 0.4rem;
   }
-  label {
-    font-size: 2rem;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+  .single-card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
-  [type="radio"]:not(:checked), [type="radio"]:checked {
-    margin: 1rem;
+  .card-content-title {
+    margin-top: 0;
+  }
+  .first-element {
+    margin: 0 !important;
   }
 }
