Added classes to elements to implement spacing for titles

--- a/templates/pages/services.html
+++ b/templates/pages/services.html
@@ -38,7 +38,7 @@
                 {% if session['is_staff'] %}
                 <div class="col s12 m5 l6">
                     <div class="card-content">
-                        <p class="card-content-title">Service Provider</p>
+                        <p class="card-content-title first-element">Service Provider</p>
                         <p>{{service.service_first_name}} {{service.service_last_name}}</p>
                         <p class="card-content-title">Contact</p>
                         <p>{{service.email}}</p>
