Updated card styles to match new content on stores cards

--- a/static/css/base/_presets.scss
+++ b/static/css/base/_presets.scss
@@ -12,11 +12,11 @@ a {
     text-decoration: none;
     color: $black-color;
 }
-label {
-    font-size: 1.5rem;
-    color: $black-color;
-    display: flex;
-    justify-content: space-evenly;
+.switch, .feedback-radio {
+    label {
+        font-size: 2rem;
+        color: $black-color;
+    }
 }
 [type="radio"]:not(:checked), [type="radio"]:checked {
     position: relative;
