--- a/templates/forms/services/feedback-service.html
+++ b/templates/forms/services/feedback-service.html
@@ -4,13 +4,13 @@
         <p class="secondary-text center">Leave your feedback for this service.</p>
         <p class="center">Your feedback is very important to us and to other users, helping them with their choices!</p>
         <div class="row">
-            <div class="col s6">
+            <div class="col s6 feedback-radio">
                 <label>
                     <input class="with-gap" name="feedback-radio" value="positive" type="radio" />
                     <span>Positive</span>
                 </label>
             </div>
-            <div class="col s6">
+            <div class="col s6 feedback-radio">
                 <label>
                     <input class="with-gap" name="feedback-radio" value="negative" type="radio" />
                     <span>Negative</span>
