--- a/templates/pages/services.html
+++ b/templates/pages/services.html
@@ -22,7 +22,7 @@
         <div class="row card-row-find">
             {% for service in services %}
             <div class="card row single-card">
-                <div class="col s12 m3">
+                <div class="col s12 m3 card-first-div">
                     <p class="card-title">{{service.type_of_service}}</p>
                     <div class="card-image">
                         <i class="material-icons card-icon">supervisor_account</i>
@@ -46,15 +46,15 @@
                         <p>Visit: {{service.aff_link}}</p>
                         <p>Use the code <strong>{{service.discount_code}}</strong> to get <strong>{{service.discount_amount}} off</strong>!</p>
                         <p class="card-content-title">Description</p>
-                        <p class="truncate">{{service.service_description}}</p>
+                        <p>{{service.service_description}}</p>
                     </div>
                 </div>
-                {% if session['is_staff'] == 'is_staff' %}
                 <div class="col s12 m4 l3 buttons-row">
                     <a id="{{service._id}}" value="feedback" class="waves-effect waves-light btn card-action-button form-trigger">
                         <i class="material-icons right card-action-button-icon">thumbs_up_down</i>
                         <span>Feedback</span>
                     </a>
+                {% if session['is_staff'] == 'is_staff' %}
                     <a id="{{service._id}}" value="edit"
                         class="waves-effect waves-light btn card-action-button form-trigger">
                         <i class="material-icons right card-action-button-icon">edit</i>
