Updated email field names from _email to email

--- a/templates/forms/services/register-service.html
+++ b/templates/forms/services/register-service.html
@@ -17,8 +17,8 @@
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="_email" type="email" class="validate" data-length="40" required>
-                <label for="_email">Email</label>
+                <input name="email" type="email" class="validate" data-length="40" required>
+                <label for="email">Email</label>
             </div>
         </div>
         <div class="row">
