--- a/templates/forms/stores/edit-store.html
+++ b/templates/forms/stores/edit-store.html
@@ -13,8 +13,8 @@
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="_email" type="email" class="validate" data-length="40">
-                <label for="_email">Email</label>
+                <input name="email" type="email" class="validate" data-length="40">
+                <label for="email">Email</label>
             </div>
             <div class="input-field col s6">
                 <input name="aff_link" type="text" class="validate" data-length="40">
