Updated way affiliate links are displayed on card

--- a/templates/pages/services.html
+++ b/templates/pages/services.html
@@ -43,7 +43,7 @@
                         <p class="card-content-title">Contact</p>
                         <p>{{service.email}}</p>
                         <p class="card-content-title">Promotion</p>
-                        <p>Visit: {{service.aff_link}}</p>
+                        <p>Visit {{service.service_first_name}}'s page <a href={{service.aff_link}} target="_blank" rel="noopener"><strong>HERE</strong></a> </p>
                         <p>Use the code <strong>{{service.discount_code}}</strong> to get <strong>{{service.discount_amount}} off</strong>!</p>
                         <p class="card-content-title">Description</p>
                         <p>{{service.service_description}}</p>
