--- a/templates/pages/stores.html
+++ b/templates/pages/stores.html
@@ -44,7 +44,7 @@
                         <p class="card-content-title">Contact</p>
                         <p>{{store.email}}</p>
                         <p class="card-content-title">Promotion</p>
-                        <p>Visit: {{store.aff_link}}</p>
+                        <p>Visit {{store.store_name}} page <a href={{store.aff_link}} target="_blank" rel="noopener"><strong>HERE</strong></a> </p>
                         <p>Use the code <strong>{{store.discount_code}}</strong> to get <strong>{{store.discount_amount}} off</strong>!</p>
                         <p class="card-content-title">Description</p>
                         <p>{{store.store_description}}</p>
