Added feedback messages to users when the adoption request was successful or not

--- a/templates/pages/dogs.html
+++ b/templates/pages/dogs.html
@@ -5,6 +5,9 @@
 </div>
 <div class="section white">
     <div class="container">
+
+        {% include 'layout/user-feedback-message.html' %}
+
         <div class="container">
             <h2 class="heading-text">Pawer Dogs</h2>
             <p class="secondary-text">Looking for a new doggy friend to adopt? We have an incredible number of dogs
