--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -18,7 +18,7 @@
             dog-owner-to-be or how to help your pack accepting their new buddy.</p>
         <h4>Visit our PAWER Adoption page</h4>
         <a href="{{url_for('get_dogs')}}" class="col s4 offset-s4 btn waves-effect secondary-text index-action-button">
-            <i class="material-icons">supervisor_account</i>
+            <i class="material-icons">pets</i>
             Adopt
         </a>
     </div>
@@ -50,7 +50,7 @@
         <p>Go through a variety of shops that offer as many options of products as you can dare to imagine!</p>
         <h4>Visit our PAWER Stores page</h4>
         <a href="{{url_for('get_stores')}}" class="col s4 offset-s4 btn waves-effect secondary-text index-action-button">
-            <i class="material-icons">supervisor_account</i>
+            <i class="material-icons">shopping_cart</i>
             Stores
         </a>
     </div>
