--- a/templates/pages/requests.html
+++ b/templates/pages/requests.html
@@ -20,27 +20,34 @@
         <div class="row card-row-find">
             {% for request in requests %}
                 <div class="row card single-card">
-                    <div class="col s12 m5">
+                    <div class="col s12 m3 card-first-div">
                         <p class="card-title">Adoptant</p>
+                        <p class="card-content-title">Name</p>
                         <p>{{request.first_name}} {{request.last_name}}</p>
-                        <p>{{request._email}}</p>
+                        <p class="card-content-title">Email</p>
+                        <p>{{request.email}}</p>
                     </div>
-                    <div class="col s12 m3">
+                    <div class="col s12 m5 l6">
                         <div class="card-content">
                             <p class="card-title">Dog</p>
+                            <p class="card-content-title">Name</p>
                             <p>{{request.dog_name}}</p>
+                            <p class="card-content-title">Breed</p>
                             <p>{{request.dog_breed}}</p>
+                            <p class="card-content-title">Reasoning</p>
                             <p>{{request.why_adopt}}</p>
                         </div>
                     </div>
-                    <div class="col s12 m4 card-buttons-row">
+                    <div class="col s12 m4 l3 buttons-row">
+                        <p class="card-title">Adoption</p>
+                        <p>Was the dog adopted?</p>
                         <a value="not_adopted_dog" id="{{request._id}}" class="waves-effect waves-light btn card-action-button form-trigger">
                             <i class="material-icons right card-action-button-icon">clear</i>
-                            <span>Not Adopted</span>
+                            <span>No</span>
                         </a>
                         <a value="adopted_dog" id="{{request._id}}"  class="waves-effect waves-light btn card-action-button form-trigger">
                             <i class="material-icons right card-action-button-icon">done</i>
-                            <span>Adopted</span>
+                            <span>Yes</span>
                         </a>
                     </div>
                 </div>
