Added shadow to index action buttons

--- a/static/css/components/_buttons.scss
+++ b/static/css/components/_buttons.scss
@@ -25,7 +25,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    box-shadow: -3px 6px 13px 0px #00000094;
+    
     i{
         font-size: 3rem;
         margin-right: 0.5rem;
