--- a/static/css/style.css
+++ b/static/css/style.css
@@ -258,13 +258,31 @@ nav .button-collapse {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-shadow: -3px 6px 13px 0px #00000094;
-          box-shadow: -3px 6px 13px 0px #00000094;
+  -webkit-box-shadow: -3px 6px 6px 0px #00000094;
+          box-shadow: -3px 6px 6px 0px #00000094;
 }
 
 .index-action-button i {
   font-size: 3rem;
   margin-right: 0.5rem;
+}
+
+.dogs-action-button {
+  color: #ffffff;
+  font-size: 1rem;
+  padding: 0rem;
+  margin-bottom: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: -3px 6px 6px 0px #00000094;
+          box-shadow: -3px 6px 6px 0px #00000094;
 }
 
 /* Cards */
