Updated classes on dogs action button

--- a/templates/pages/dogs.html
+++ b/templates/pages/dogs.html
@@ -16,8 +16,8 @@
                 to talk about the adoption process and to help you to accomodate your new best friend to its new home!
             </p>
             <p><strong>Only registered and logged in users are able to apply for adoption.</strong></p>
-            <p>If you are registered, <a class="s12 offset-m4 m4 btn waves-effect secondary-text dogs-action-button" href="{{url_for('user_login')}}">login here</a> If you aren't registered yet,
-                <a class="s12 offset-m4 m4 btn waves-effect secondary-text dogs-action-button" href="{{url_for('register')}}">register here</a> </p>
+            <p>If you are registered, <a class="offset-s4 s4 btn waves-effect secondary-text dogs-action-button" href="{{url_for('user_login')}}">login here</a> If you aren't registered yet,
+                <a class="offset-s4 s4 btn waves-effect secondary-text dogs-action-button" href="{{url_for('register')}}">register here</a> </p>
         </div>
         <div class="row card-row-find">
             {% for dog in dogs %}
