--- a/static/css/components/_buttons.scss
+++ b/static/css/components/_buttons.scss
@@ -36,7 +36,7 @@
     color: $white-color;
     font-size: 1rem;
     padding: 0rem;
-    margin-bottom: 1.5rem;
+    margin: 0 auto 1.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
