--- a/static/css/style.css
+++ b/static/css/style.css
@@ -271,7 +271,7 @@ nav .button-collapse {
   color: #ffffff;
   font-size: 1rem;
   padding: 0rem;
-  margin-bottom: 1.5rem;
+  margin: 0 auto 1.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -368,5 +368,8 @@ nav .button-collapse {
   }
   .first-element {
     margin: 0 !important;
+  }
+  .dogs-action-button {
+    width: 50%;
   }
 }
