--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,6 +48,10 @@ a {
   z-index: 1;
 }
 
+.active {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
 /* Typography */
 .heading-text {
   font-family: "Alfa Slab One", sans-serif;
