--- a/templates/pages/services.html
+++ b/templates/pages/services.html
@@ -70,6 +70,7 @@
                         <i class="material-icons right card-action-button-icon">delete</i>
                         <span>Delete</span>
                     </a>
+                    {% endif %}
                 </div>
                 {% endif %}
             </div>
