--- a/static/css/layout/_cards.scss
+++ b/static/css/layout/_cards.scss
@@ -6,7 +6,12 @@
 }
 .card-row-register {
     display: flex;
+    flex-direction: column;
     align-items: stretch;
+
+    .s12 {
+        margin-bottom: 2rem;
+    }
 }
 .single-card{
     margin: 1rem 0!important;
