--- a/templates/pages/stores.html
+++ b/templates/pages/stores.html
@@ -47,9 +47,11 @@
                         <p>{{store.store_address}}</p>
                         <p class="card-content-title">Contact</p>
                         <p>{{store.email}}</p>
+                        {% if session['is_staff'] %}
                         <p class="card-content-title">Promotion</p>
                         <p>Visit {{store.store_name}} page <a href={{store.aff_link}} target="_blank" rel="noopener"><strong>HERE</strong></a> </p>
                         <p>Use the code <strong>{{store.discount_code}}</strong> to get <strong>{{store.discount_amount}} off</strong>!</p>
+                        {% endif %}
                         <p class="card-content-title">Description</p>
                         <p>{{store.store_description}}</p>
                     </div>
@@ -72,9 +74,8 @@
                         <i class="material-icons right card-action-button-icon">delete</i>
                         <span>Delete</span>
                     </a>
-                    {% endif %}
+                {% endif %}
                 </div>
-                {% endif %} 
             </div>
             {% include 'forms/stores/feedback-store.html' %}
             {% endif %}
