Changed css to better display information on cards

--- a/static/css/layout/_cards.scss
+++ b/static/css/layout/_cards.scss
@@ -19,6 +19,7 @@
 
     .buttons-row {
         margin: 0;
+        padding: 0;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
