Changed text on button to suit better purpose and space

--- a/templates/dashboard/dash-staff.html
+++ b/templates/dashboard/dash-staff.html
@@ -29,7 +29,7 @@
         <div class="col s12 m4 l3 buttons-row">
             <a href="{{url_for('get_adopt_requests')}}" class="waves-effect waves-light btn card-action-button form-trigger">
                 <i class="material-icons right card-action-button-icon">edit</i>
-                <span>Adoptions</span>
+                <span>Process</span>
             </a>
         </div>
     </div>
