--- a/templates/forms/services/delete-service.html
+++ b/templates/forms/services/delete-service.html
@@ -1,7 +1,9 @@
 <div class="form-box hide" id="{{service._id}}" value="delete">
     <form action="{{ url_for('delete_entry', usr_type='services', usr_id=service._id) }}" method="POST" class="col s12 delete-form">
         <div class="row">
-            <h3>Are you sure ou want to delete?</h3>
+            <h2 class="heading-text">Delete service</h2>
+            <p class="secondary-text center">This will delete this service record from the database.</p>
+            <p class="center">Are you sure ou want to delete?</p>
             <button class="btn waves-effect waves-light" type="submit">Yes, Delete
                 <i class="material-icons right">delete</i>
             </button>
